using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Bomber.Model
{
    public enum Direction
    {
        Up, Down, Left, Right
    }
}
